<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="label_activity_historicvalues">(%s) History Values</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key">stocks</string>

    <string name="chart_no_data">No data</string>


    <string name="pref_display_mode_title">Display Mode</string>
    <string name="pref_display_mode_key">displayMode</string>
    <string name="pref_display_mode_default">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key">absolute</string>
    <string name="pref_display_mode_percentage_key">percentage</string>

    <string name="default_stocks_yahoo">YHOO</string>
    <string name="default_stocks_apple">AAPL</string>
    <string name="default_stocks_microsoft">MSFT</string>
    <string name="default_stocks_facebook">FB</string>


    <string name="action_change_units">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_stock_not_found">Symbol %s is invalid!</string>
    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>

    <string name="toast_invalid_stock">%1$s is not a valid stock symbol!</string>

    <!-- Activity parameter -->
    <string name="activity_symbol_parameter" translatable="false">symbol</string>

    <!-- Stock change format -->
    <string name="stock_change_format" translatable="false">%1$s (%2$s)</string>

    <!-- Historic values activity date formatter -->
    <string name="activity_historic_date_formatter" translatable="false">dd MM yyyy</string>

    <!-- Historic values interval selector values -->
    <string name="activity_historic_data_one_month">1 month</string>
    <string name="activity_historic_data_three_months">3 months</string>
    <string name="activity_historic_data_six_months">6 months</string>
    <string name="activity_historic_data_one_year">1 year</string>
    <string name="activity_historic_data_two_years">2 years</string>
</resources>
