<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/historic_values_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/historic_values_chart" />

    <RadioGroup android:id="@+id/toggleGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton android:id="@+id/btn_one_month"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_selector"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textOn="@string/activity_historic_data_one_month"
            android:textOff="@string/activity_historic_data_one_month"
            android:contentDescription="@string/activity_historic_data_one_month"
            android:onClick="onToggle" />
        <ToggleButton android:id="@+id/btn_three_month"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_selector"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textOn="@string/activity_historic_data_three_months"
            android:textOff="@string/activity_historic_data_three_months"
            android:contentDescription="@string/activity_historic_data_three_months"
            android:onClick="onToggle" />
        <ToggleButton android:id="@+id/btn_six_month"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_selector"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textOn="@string/activity_historic_data_six_months"
            android:textOff="@string/activity_historic_data_six_months"
            android:contentDescription="@string/activity_historic_data_six_months"
            android:onClick="onToggle" />
        <ToggleButton android:id="@+id/btn_one_year"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_selector"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textOn="@string/activity_historic_data_one_year"
            android:textOff="@string/activity_historic_data_one_year"
            android:contentDescription="@string/activity_historic_data_one_year"
            android:onClick="onToggle" />
        <ToggleButton android:id="@+id/btn_two_month"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/toggle_selector"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textOn="@string/activity_historic_data_two_years"
            android:textOff="@string/activity_historic_data_two_years"
            android:contentDescription="@string/activity_historic_data_two_years"
            android:onClick="onToggle" />
    </RadioGroup>
</LinearLayout>